--- a/css/dingdan.css
+++ b/css/dingdan.css
@@ -14,6 +14,115 @@
 			background-image: linear-gradient(90deg, #4579ff 0%, #42fffd 100%);
     	}
     	
+    	
+    	
+    	
+    	
+    	
+    	.listnr {
+			width: 100%;
+			height: 12rem;
+			padding-left: 0.24rem;
+			padding-right: 0.24rem;
+			padding-top: 0.24rem;
+			background-color: #dadada;
+		}
+		.listnr>ul {
+			width: 100%;
+			height: 100%;
+			list-style: none;
+		}
+		.listnr>ul>li {
+			width: 100%;
+			height: 2.4rem;
+			margin-bottom: 0.24rem;
+			float: left;
+		}
+		.listnr>ul>li>div {
+			width: 100%;
+			height: 100%;
+			background-color: white;
+			border: none;
+			border-radius: 3%;
+			padding-left: 0.18rem;
+			padding-top: 0.24rem;
+			padding-bottom: 0.24rem;
+			padding-right: 0.18rem;
+		}
+		.listnr>ul>li>div>.zuo {
+			width: 25.2%;
+			height: 100%;
+			float: left;
+		}
+		.listnr>ul>li>div>.zuo>img {
+			width: 100%;
+			height: 82.5%;
+			display: block;
+			float: left;
+		}
+		.you>.mi>div {
+			float: right;
+			text-align: right;
+			color: lightgrey;
+			font-size: 0.16rem;
+		}
+		.listnr>ul>li>div>.you {
+			width: 74.8%;
+			height: 100%;
+			padding-left: 0.24rem;
+			float: right;
+			position: relative;
+			position: relative;
+		}
+		.listnr>ul>li>div>.you>.mi{
+			font-size: 0.28rem;
+		}
+		.listnr>ul>li>div>.you>.xing {
+			width: 100%;
+			height: 0.3rem;
+			margin-top: 0.06rem;
+		}
+		.listnr>ul>li>div>.you>.xing>img {
+			display: block;
+			width: 1rem;
+			height: 0.16rem;
+			margin-right: 0.05rem;
+			margin-top: 0.0375rem;
+			float: left;
+		}
+		
+    	.qisong {
+			width: 100%;
+			height: 0.25rem;
+			font-size: 0.2rem;
+			color: rgba(0,0,0,0.4);
+		}
+		.qisong>div:first-child {
+			width: 60%;
+			float: left;
+		}
+		.qisong>div:last-child{
+			width: 40%;
+			float: right;
+			color: skyblue;
+			font-size: 0.4rem
+		}
+		.zailai {
+			width: 100%;
+			height: 1rem;
+		}
+		.zailai>img {
+			width: 4rem;
+			height: 1rem;
+			display: block;
+			float: left;
+		}
+
+
+
+
+
+
 
 
 
